--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "node": "12.x"
   },
   "repository": {
-    "url": "https://glitch.com/edit/#!/hello-express"
+    "url": "https://github.com/queendeveloperbr/Sky"
   },
   "license": "MIT",
   "keywords": [
