--- a/package.json
+++ b/package.json
@@ -10,23 +10,24 @@
     "start": "node index.js"
   },
   "dependencies": {
-    "express": "^4.17.1",
-    "ejs": "^3.1.5",
-    "discord.js": "^12.3.1",
-    "passport": "^0.4.1",
-    "passport-discord": "^0.1.4",
-    "mongoose": "^5.10.10",
     "ascii-table": "^0.0.9",
-    "node-fetch": "^2.6.1",
-    "express-session": "^1.17.1",
-    "connect-mongo": "^3.2.0",
-    "colors": "^1.4.0",
-    "moment": "^2.29.1",
-    "os-utils": "^0.0.14",
-    "node-os-utils": "^1.3.2",
-    "firebase": "^7.24.0",
     "canvacord": "^5.0.6",
-    "discord-canvas": "^1.3.2"
+    "colors": "^1.4.0",
+    "connect-mongo": "^3.2.0",
+    "discord-canvas": "^1.3.2",
+    "discord.js": "^12.3.1",
+    "ejs": "^3.1.5",
+    "express": "^4.17.1",
+    "express-session": "^1.17.1",
+    "figlet": "^1.5.0",
+    "firebase": "^7.24.0",
+    "moment": "^2.29.1",
+    "mongoose": "^5.10.10",
+    "node-fetch": "^2.6.1",
+    "node-os-utils": "^1.3.2",
+    "os-utils": "^0.0.14",
+    "passport": "^0.4.1",
+    "passport-discord": "^0.1.4"
   },
   "engines": {
     "node": "12.x"
