--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "express-session": "^1.17.1",
     "figlet": "^1.5.0",
     "firebase": "^7.24.0",
+    "google-translate-api": "^2.3.0",
     "moment": "^2.29.1",
     "mongoose": "^5.10.10",
     "node-fetch": "^2.6.1",
