--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "os-utils": "^0.0.14",
     "passport": "^0.4.1",
     "passport-discord": "^0.1.4",
+    "puppeteer": "^5.5.0",
     "search-npm-registry": "^2.0.3"
   },
   "engines": {
