--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "figlet": "^1.5.0",
     "firebase": "^7.24.0",
     "google-translate-api": "^2.3.0",
+    "hastebin": "^0.2.1",
     "moment": "^2.29.1",
     "mongoose": "^5.10.10",
     "node-fetch": "^2.6.1",
